5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4160/executions/1637_2704.log
== TEST (2019-04-09 10:34:18) 
-- CODE:
nota = float(input(" Digite a nota do aluno: "))
mensagem = input ("Informe se o aluno vai receber a bonificação ou não (S ou N):")

if (mensagem == s):
	final = nota + (nota * 0.1)
else: 
	final = nota
	
print(final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (mensagem == s):
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:34:41) 
-- CODE:
nota = float(input(" Digite a nota do aluno: "))
mensagem = input ("Informe se o aluno vai receber a bonificação ou não (S ou N):")

if (mensagem == s):
	final = nota + (nota * 0.1)
else: 
	final = nota
	
print(final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (mensagem == s):
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:35:29) 
-- CODE:
nota = float(input("Digite a nota do aluno: "))
mensagem = input ("Bonificação ou não (S ou N): ")

if (mensagem == s):
	final = nota + (nota * 0.1)
else: 
	final = nota
	
print(final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (mensagem == s):
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:36:17) 
-- CODE:
nota = float(input("Digite a nota do aluno: "))
mensagem = input ("Bonificação ou não (S ou N): ")

if (mensagem == s):
	final = nota + (nota * 0.1)
else: 
	final = nota
	
print(final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (mensagem == s):
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:36:40) 
-- CODE:
nota = float(input("Digite a nota do aluno: "))
mensagem = input ("Bonificacao ou nao (S ou N): ")

if (mensagem == s):
	final = nota + (nota * 0.1)
else: 
	final = nota
	
print(final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (mensagem == s):
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:38:07) 
-- CODE:
nota = float(input("Digite a nota do aluno: "))
mensagem = input ("Bonificacao ou nao (S ou N): ")

if (mensagem == S) :
	final = nota + (nota * 0.1)
else: 
	final = nota
	
print(final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (mensagem == S) :
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:38:14) 
-- CODE:
nota = float(input("Digite a nota do aluno: "))
mensagem = input ("Bonificacao ou nao (S ou N): ")

if (mensagem == S) :
	final = nota + (nota * 0.1)
else: 
	final = nota
	
print(final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (mensagem == S) :
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:39:52) 
-- CODE:
nota = float(input("Digite a nota do aluno: "))
mensagem = input ("Bonificacao ou nao (S ou N): ")
S = bonificacao

if (mensagem == S) :
	final = nota + (nota * 0.1)
else: 
	final = nota
	
print(final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    S = bonificacao
NameError: name 'bonificacao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:42:39) 
-- CODE:
nota = float(input("Digite a nota do aluno: "))
mensagem = input ("Bonificacao ou nao (S ou N): ")

if (mensagem == "S") :
	final = nota + (nota * 0.1)
else: 
	final = nota
	
print(final)
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:42:49) 
-- CODE:
nota = float(input("Digite a nota do aluno: "))
mensagem = input ("Bonificacao ou nao (S ou N): ")

if (mensagem == "S") :
	final = nota + (nota * 0.1)
else: 
	final = nota
	
print(final)
-- EXECUTION TIME:
0.13783
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
